style(blog): fix alignment of blog on home page

--- a/assets/scss/components/_blog-section.scss
+++ b/assets/scss/components/_blog-section.scss
@@ -38,9 +38,10 @@
 		margin-bottom: 20px;
 		@include desktop {
 			margin-bottom: 130px;
+			padding-bottom: 60px;
 		}
 		&-thumb {
-			width: 90%;
+			width: 100%;
 			height: 100%;
 			overflow: hidden;
 			border-radius: 20px;
@@ -66,8 +67,8 @@
 		}
 		&-content {
 			position: absolute;
+			width: 100%;
 			bottom: -100px;
-			left: 40px;
 			padding: 30px;
 			border-radius: 20px;
 			box-shadow: 0px 20px 40px 0px rgba(50, 65, 141, 0.12);
